# fiat-lux-agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: app-claude-template.md  ci-setup.md  document_bot.md  knowledge_bot.md
fiat_lux_agents/: __init__.py  base.py  chart_digitizer_bot.py  chat_bot.py  data_lake_bot.py  document_bot.py  document_extractor.py  filter_bot.py  filter_chat_bot.py  filter_engine.py  hierarchical_filter_bot.py  hierarchical_filter_chat_bot.py  hierarchical_filter_engine.py  knowledge_bot.py  mcp_client.py  ml_bot.py  query_engine.py  style_writer.py  summary_bot.py  url_fetcher.py  utils.py  web_search_bot.py
fiat_lux_agents/auth/: __init__.py  blueprint.py  db.py  email.py  handlers.py  tokens.py
fiat_lux_agents/explorer/: __init__.py  blueprint.py
fiat_lux_agents/explorer/static/: explorer.css  explorer.js
fiat_lux_agents/explorer/templates/: explorer_tab.html
notebooks/: test_analytics.ipynb
scripts/: new-app.sh
testapp/: app.py  data.py
testapp/static/css/: style.css
testapp/static/js/: app.js
testapp/templates/: about.html  datalake.html  index.html
tests/: test_auth.py  test_base.py  test_blueprint.py  test_chat_bot.py  test_mcp_client.py  test_query_engine.py  test_style_writer.py  test_url_fetcher.py
