[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiat-lux-agents"
version = "0.1.0"
description = "Reusable AI agents for data exploration"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.39.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-dotenv>=0.5.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fiat_lux_agents*"]
